# dc_logger

./: .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  README.md  USAGE.md  __init__.py  architecture.md  commit_messages.txt  decorators.py  index-commonmark.md  index.html  logger.py  pyproject.toml  readme.md  robots.txt  search.json  settings.ini  sitemap.xml  test.ipynb  utils.py
.ai/: context.md  examples.yaml
.github/: copilot-instructions.md
.github/instructions/: instructions.instructions.md
.github/workflows/: pre-commit.yml  python_publish.yaml
.pre-commit-scripts/: sync_version.py
_proc/: index.ipynb
client/: __init__.py  base.html  base.html.md  decorators.html  decorators.html.md  exceptions.html  exceptions.html.md  extractors.html  extractors.html.md  log.html  log.html.md  models.py
configs/: LogConfig.py  LogConfig_Cloud.py  MultiHandler_LogConfig.py  __init__.py  cloud.py  multi_handler.py
dc_logger/: __init__.py  _modidx.py  decorators.py
dc_logger.egg-info/: SOURCES.txt
dc_logger/client/: Log.py  __init__.py  base.py  decorators.py  exceptions.py  extractors.py  models.py
dc_logger/configs/: cloud.py  console.py
dc_logger/logs/: logs.py  tracing.py
dc_logger/logs/services/: console.py  file.py
dc_logger/logs/services/cloud/: datadog.py
dc_logger/services/: base.py
dc_logger/services/cloud/: datadog.py
dc_logger/services/console/: base.py
docs/: ai-agent-guide.md  best-practices.md  configuration.md  getting-started.md
documentation/: CONSOLE_COLORS.md
example_logs/: business_operations.json
examples/: 01_basic_logs.ipynb  02_extractors.ipynb  03_decorators.ipynb  04_console_logging.ipynb  05_file_logging.ipynb  06_cloud_logging.ipynb  07_multi_handler.ipynb  08_data_obscuring.ipynb  README.md  advanced_logging.py  basic_usage.py  custom_handlers.py  example_console_colors.py  example_datadog_simple.py  example_enhanced_logging.py  example_global_logger_injection.py  test.ipynb
handlers/: __init__.py  base.py
handlers/cloud/: __init__.py  aws.py  azure.py  base.py  datadog.py  gcp.py
nbs/: index.md  nbdev.yml
nbs/_logs/: _factory.ipynb
nbs/client/: Log.ipynb  README.md  base.ipynb  decorators.ipynb  exceptions.ipynb  extractors.ipynb
nbs/configs/: cloud.ipynb  console.ipynb
nbs/logs/: logs.ipynb  tracing.ipynb
nbs/logs/services/: base.ipynb  base.py
nbs/logs/services/cloud/: base.py  datadog.ipynb
nbs/services/: base.ipynb
nbs/services/cloud/: _aws.py  _azure.py  _gcp.py  base.ipynb  datadog.ipynb
nbs/services/console/: base.ipynb  console.ipynb
nbs/services/file/: base.ipynb
services/cloud/: base.html  base.md  datadog.html  datadog.md
services/console/: base.html  base.md
services/file/: base.html  base.md
src/: logger.py
src/dc_logger/: __init__.py  color_utils.py  decorators.py  logger.py  utils.py
src/dc_logger/client/: __init__.py  base.py  correlation.py  enums.py  extractors.py  models.py
src/dc_logger/configs/: __init__.py  base.py  cloud.py  factory.py  multi_handler.py
src/dc_logger/handlers/: base.py  console.py  file.py
src/dc_logger/handlers/cloud/: base.py  datadog.py
src/dc_logger/logs/services/: console.py  file.py
src/dc_logger/logs/services/cloud/: datadog.py
src/dc_logger/services/: base.py
src/dc_logger/services/cloud/: base.py  datadog.py
src/dc_logger/services/console/: base.py
tests/: __init__.py  test_documentation.py
