[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dc_logger"
version = "1.1.1"
description = "A flexible logging library with support for cloud providers, multi-tenancy, and structured logging"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Jae Wilson", email = "jaewilson07@gmail.com"}
]
keywords = ["logging", "datadog", "cloud", "observability", "structured-logging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
]
dependencies = [
    "pydantic",
    "typing-extensions",
    "requests"
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "bandit",
    "pre-commit",
    "nbstripout",
]
datadog = [
    "datadog-api-client>=2.0.0",
]
all = [
    "dc_logger[dev,datadog]",
]

[project.urls]
Homepage = "https://github.com/jaewilson07/dc_logger"
Documentation = "https://jaewilson07.github.io/dc_logger"
Repository = "https://github.com/jaewilson07/dc_logger"
Issues = "https://github.com/jaewilson07/dc_logger/issues"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "dc_logger.*"
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dc_logger*"]
